[6.0] Updating TinyMCE to 8.0.1 (#45844)
* Updating TinyMCE to 8.0.1
* Adding language strings
* Switching to official translation files
* Minify translation files

--- a/plugins/editors/tinymce/forms/setoptions.xml
+++ b/plugins/editors/tinymce/forms/setoptions.xml
@@ -239,6 +239,24 @@
 			<option value="1">JON</option>
 		</field>
 
+		<field
+			name="sandbox_iframes_exclusions"
+			type="subform"
+			label="PLG_TINY_FIELD_SANDBOX_IFRAMES_EXCLUSIONS_LIST_LABEL"
+			description="PLG_TINY_FIELD_SANDBOX_IFRAMES_EXCLUSIONS_LIST_DESC"
+			multiple="true"
+			showon="sandbox_iframes:1"
+			>
+			<form>
+				<field
+					name="exclusion_domain"
+					type="text"
+					label="PLG_TINY_FIELD_SANDBOX_IFRAMES_EXCLUSION_DOMAIN_LABEL"
+					required="true"
+				/>
+			</form>
+		</field>
+
 		<!-- Extra plugins -->
 		<field
 			name="resizing"
