--- a/plugins/media-action/crop/form/crop.xml
+++ b/plugins/media-action/crop/form/crop.xml
@@ -64,22 +64,22 @@
 			label="PLG_MEDIA-ACTION_CROP_PARAM_ASPECT"
 			hiddenLabel="true"
 			class="crop-aspect-ratio-options"
-			default="1.111"
-			>
-			<option class="crop-aspect-ratio-option" value="1.111">PLG_MEDIA-ACTION_CROP_PARAM_DEFAULT_RATIO</option>
+			default="10/9"
+		>
+			<option class="crop-aspect-ratio-option" value="10/9">PLG_MEDIA-ACTION_CROP_PARAM_DEFAULT_RATIO</option>
 			<option class="crop-aspect-ratio-option" value="">PLG_MEDIA-ACTION_CROP_PARAM_NO_RATIO</option>
 			<option class="crop-aspect-ratio-option" value="1">1:1</option>
 			<group label="PLG_MEDIA-ACTION_CROP_PARAM_LANDSCAPE">
-				<option class="crop-aspect-ratio-option" value="1.25">5:4</option>
-				<option class="crop-aspect-ratio-option" value="1.3333333333333333">4:3</option>
-				<option class="crop-aspect-ratio-option" value="1.5">3:2</option>
-				<option class="crop-aspect-ratio-option" value="1.7777777777777777">16:9</option>
+				<option class="crop-aspect-ratio-option" value="5/4">5:4</option>
+				<option class="crop-aspect-ratio-option" value="4/3">4:3</option>
+				<option class="crop-aspect-ratio-option" value="3/2">3:2</option>
+				<option class="crop-aspect-ratio-option" value="16/9">16:9</option>
 			</group>
 			<group label="PLG_MEDIA-ACTION_CROP_PARAM_PORTRAIT">
-				<option class="crop-aspect-ratio-option" value="0.8">4:5</option>
-				<option class="crop-aspect-ratio-option" value="0.75">3:4</option>
-				<option class="crop-aspect-ratio-option" value="0.6666666666666667">2:3</option>
-				<option class="crop-aspect-ratio-option" value="0.5625">9:16</option>
+				<option class="crop-aspect-ratio-option" value="4/5">4:5</option>
+				<option class="crop-aspect-ratio-option" value="3/4">3:4</option>
+				<option class="crop-aspect-ratio-option" value="2/3">2:3</option>
+				<option class="crop-aspect-ratio-option" value="9/16">9:16</option>
 			</group>
 		</field>
 	</fieldset>
